Most of the stuff works, Making a commit cause i need to fix toast notifs

--- a/FoodWasteApp.csproj
+++ b/FoodWasteApp.csproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows7.0</TargetFramework>
+    <TargetFramework>net8.0-windows8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>False</UseWindowsForms>
+    <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,10 +18,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="2024-05-05-14_42_33-firefox.png" />
     <None Remove="WindowBg.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.WinUI.Notifications" Version="7.1.2" />
+    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="2024-05-05-14_42_33-firefox.png" />
     <Resource Include="WindowBg.png" />
   </ItemGroup>
 
